# amazon_sales_analysis

./: .gitignore  README.md  main_analysis.py  pipeline.py  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_sales_analysis.ipynb  04_product_analysis.ipynb  05_geographical_analysis.ipynb  06_customer_segmentation.ipynb
src/: analysis_functions.py  data_processing.py  visualization.py
